--- a/index.html
+++ b/index.html
@@ -1,14 +1,98 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
-    <link rel="stylesheet" href="assets/css/style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-  </head>
-  <body>
-    <h1 class="hey">Hello, world!</h1>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Bootstrap demo</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="assets/css/style.css">
+  <link rel="preload" href="assets/fonts">
+  <!-- <link rel="stylesheet" href="assets/css/demo.css"> -->
+  <link rel="stylesheet" href="assets/css/mmenu-light.css">
+</head>
+
+<body>
+
+  <div class="billo_main">
+    <!-- header section start -->  
+    <header class="headerr">
+      <div class="container">
+        <div class="hdr_row">
+          <div class="hdr_logo">
+            <h2 class="billo">BILLO.</h2>
+          </div>
+          <div class="hdr_menu">
+            <ul class="menu_trans">
+              <li><a href="#">HOME</a></li>
+              <li><a href="#">SERVICE</a></li>
+              <li><a href="#">ABOUT</a></li>
+              <li><a href="#">FEATURES</a></li>
+              <li><a href="#">REVIEWS</a></li>
+              <li><a href="#">BLOG</a></li>
+              <li><a href="#">CONTACT</a></li>
+            </ul>
+          </div>
+           <!-- mmenu html start -->
+       <div id="page">
+        <div class="header">
+            <a href="#menu"><span><i class="fa-solid fa-bars"></i></span></a>           
+            <nav id="menu">
+              <ul class="menu_trans">
+                <li><a href="#">HOME</a></li>
+                <li><a href="#">SERVICE</a></li>
+                <li><a href="#">ABOUT</a></li>
+                <li><a href="#">FEATURES</a></li>
+                <li><a href="#">REVIEWS</a></li>
+                <li><a href="#">BLOG</a></li>
+                <li><a href="#">CONTACT</a></li>
+              </ul>
+            </nav>
+        </div>      
+      <!-- mmenu html end -->
+        </div>
+      </div>
+
+    </header>
+      <!-- header section end -->
+      <main>
+
+
+  
+   
+          
+      </main>
+  </div>
+
+
+  <!-- mmenu js start -->
+  <script src="assets/js/mmenu-light.js"></script>
+  <script>
+    var menu = new MmenuLight(document.querySelector("#menu"), "all");
+
+    var navigator = menu.navigation({
+      // selectedClass: 'Selected',
+      // slidingSubmenus: true,
+      // theme: 'dark',
+      // title: 'Menu'
+    });
+
+    var drawer = menu.offcanvas({
+      // position: 'left'
+    });
+
+    //	Open the menu.
+    document
+      .querySelector('a[href="#menu"]')
+      .addEventListener("click", (evnt) => {
+        evnt.preventDefault();
+        drawer.open();
+      });
+  </script>
+  <!-- mmenu js end -->
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+</body>
+
 </html>
