--- a/index.html
+++ b/index.html
@@ -57,9 +57,38 @@
     </header>
       <!-- header section end -->
       <main>
-
-
-  
+        <!-- bannar start -->
+        <section class="bannar_sec">
+          <div class="banar_ovlay">
+          <div class="container">
+            <div class="bannar-row">
+              <h2 class="banar_hdng">
+                We Design Remarkable and Stunning Bootstrap Websites.
+              </h2>
+              <p class="banar_p">
+               sit amet consectetur adipisicing elit. Excepturi laborum, perferendis eum aperiam, ducimus debitis nesciunt illo!
+              </p>
+              <a class="bttn_get_started" href="#">Get Started</a>
+            </div>
+          </div>
+        </div>
+        </section>
+        <!-- bannar end -->
+        <!-- service start -->
+        <section id="service">
+          <div class="container">
+            <div class="row">
+              <div class="col-12 text-center">
+                <h2 class="service_hding">Our Services</h2>
+                <div class="devider"></div>
+                <p class="service_p">
+                  sit amet consectetur adipisicing elit. Excepturi laborum, perferendis eum aperiam, ducimus debitis nesciunt illo! sit amet consectetur adipisicing elit. Excepturi laborum.
+                 </p>
+              </div>
+            </div>
+          </div>
+        </section>
+        <!-- service end -->
    
           
       </main>
